# socratic-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
data/eval/: questions-schelling.yaml  questions.yaml
data/yaml/books/: kant-krv.yaml  plato-republic.yaml
data/yaml/concepts/: phenomenology.yaml  synthetic-a-priori.yaml
data/yaml/philosophers/: hegel.yaml  kant.yaml  nietzsche.yaml  plato.yaml  zhuangzi.yaml
docs/: TODO.md  architecture.md
notebooks/: 01_python_basics.ipynb  README.md
scripts/: __init__.py  build_schelling.py  download_data.py  init_db.py  rebuild_index.py  run_eval.py
src/: __init__.py
src/agents/: __init__.py  memory.py  recommender.py  socrates.py
src/agents/debate/: README.md
src/agents/graph/: README.md
src/agents/philosophers/: README.md
src/agents/tools/: README.md
src/api/: main.py
src/core/: __init__.py  i18n.py  llm.py  logger.py  settings.py
src/data/: __init__.py  cleaner.py  loader.py  splitter.py
src/evaluation/: evaluator.py
src/graph/: __init__.py  builder.py  client.py
src/prompts/: academic_qa.yaml  compare.yaml  debate.yaml  loader.py  socrates.yaml
src/prompts/personas/: hegel.yaml  heidegger.yaml  kant.yaml  nietzsche.yaml  socrates.yaml  zhuangzi.yaml
src/rag/: __init__.py  bm25.py  hybrid_search.py  qdrant_client.py  rag_chain.py
tests/: __init__.py  test_core.py  test_data.py  test_rag.py
ui/: app.py
